@@ -1,7 +1,6 @@
 package com.albatross.api.v1.flow.services;
 
-import com.albatross.api.v1.flow.model.smsQueue.SMSQueueItem;
-import com.albatross.api.v1.flow.model.smsQueue.TwilioMessageRequest;
+import com.albatross.api.config.CachingConfig;
 import com.albatross.api.convert.JsonCollectionDeserializer;
 import com.albatross.api.notification.NotificationService;
 import com.albatross.api.notification.model.CreateNotificationDto;
@@ -13,24 +12,30 @@ import com.albatross.api.pubsub.model.EventChannel;
 import com.albatross.api.security.SecurityService;
 import com.albatross.api.utils.SqlCache;
 import com.albatross.api.v1.flow.enums.SystemSettings;
-import com.albatross.api.v1.flow.model.*;
+import com.albatross.api.v1.flow.model.ProjectMessageOwner;
+import com.albatross.api.v1.flow.model.ProjectMessageProperties;
+import com.albatross.api.v1.flow.model.User;
+import com.albatross.api.v1.flow.model.smsQueue.SMSQueueItem;
+import com.albatross.api.v1.flow.model.smsQueue.TwilioMessageRequest;
 import com.albatross.api.v1.flow.model.smsTeam.SmsTeam;
 import com.albatross.api.v1.flow.model.smsTeam.SmsTeamUser;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.BeanWrapper;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.cache.Cache;
+import org.springframework.cache.CacheManager;
 import org.springframework.jdbc.core.BeanPropertyRowMapper;
 import org.springframework.jdbc.core.SingleColumnRowMapper;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.sql.SQLException;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -42,52 +47,56 @@ public class MessagingService {
   private final PubSubService pubSubService;
   private final SecurityService securityService;
   private final ObjectMapper om;
-
-  @Autowired
-  private NamedParameterJdbcTemplate jdbc;
+  private final NamedParameterJdbcTemplate jdbc;
+  private final CacheManager cacheManager;
 
   public ProjectMessageProperties getProject(Long projectId) {
-    User user = securityService.getCurrentUser();
-    Optional<ProjectMessageProperties> projectMessageProps = sqlCache.get(
-      "messaging.getProject",
-      Map.of("projectId", projectId),
-      new MessagePropertiesMapper<>(ProjectMessageProperties.class, om)
-    );
+    Optional<ProjectMessageProperties> projectMessageProps =
+        sqlCache.get(
+            "messaging.getProject",
+            Map.of("projectId", projectId),
+            new MessagePropertiesMapper<>(ProjectMessageProperties.class, om));
 
     // The project conversation hasn't started yet, insert it
-    if (!projectMessageProps.isPresent()) {
-      sqlCache.update("messaging.insertProject", Map.of("projectId", projectId, "createdById", user.trueUserId()));
-      projectMessageProps = sqlCache.get(
-        "messaging.getProject",
-        Map.of("projectId", projectId),
-        new MessagePropertiesMapper<>(ProjectMessageProperties.class, om)
-      );
+    if (projectMessageProps.isEmpty()) {
+      User user = securityService.getCurrentUser();
+      sqlCache.update(
+          "messaging.insertProject",
+          Map.of("projectId", projectId, "createdById", user.trueUserId()));
+
+      projectMessageProps =
+          sqlCache.get(
+              "messaging.getProject",
+              Map.of("projectId", projectId),
+              new MessagePropertiesMapper<>(ProjectMessageProperties.class, om));
     }
 
-    ProjectMessageProperties projectMessage = projectMessageProps.get();
-
-    return projectMessage;
+    return projectMessageProps.get();
   }
 
   public List<ProjectMessageProperties> getProjects() {
     User user = securityService.getCurrentUser();
-    Boolean viewAll = securityService.userHasFeatureAccessLevel(user.getId(), user.getCompanyId(), user.getHighestCompanyId(), "SMS_INBOX", List.of("VIEW_ALL"));
 
-    List<SmsTeam> userAssignedTeams = getTeamsForUser();
-    List<Long> smsTeamIds = userAssignedTeams.stream()
-      .map(SmsTeam::getId)
-      .collect(Collectors.toList());
+    Boolean viewAll =
+        securityService.userHasFeatureAccessLevel(
+            user.getId(),
+            user.getCompanyId(),
+            user.getHighestCompanyId(),
+            "SMS_INBOX",
+            List.of("VIEW_ALL"));
+
+    List<SmsTeam> userAssignedTeams = getTeamsForUser(user);
+    List<Long> smsTeamIds = userAssignedTeams.stream().map(SmsTeam::getId).toList();
 
     Map<String, Object> params =
-      Map.of(
-        "smsTeamIds", smsTeamIds,
-        "viewAll", viewAll);
+        Map.of(
+            "smsTeamIds", smsTeamIds,
+            "viewAll", viewAll);
 
-    List<ProjectMessageProperties> projectMessagesList =
-      sqlCache.query(
-        "messaging.getProjects", params, new MessagePropertiesMapper<>(ProjectMessageProperties.class, om));
-
-    return projectMessagesList;
+    return sqlCache.query(
+        "messaging.getProjects",
+        params,
+        new MessagePropertiesMapper<>(ProjectMessageProperties.class, om));
   }
 
   public void updateProjectStatus(Long projectId, Boolean closed) {
@@ -98,20 +107,24 @@ public class MessagingService {
 
     if (closed) {
       sqlCache.update("messaging.saveProjectStatusClosed", params);
-    }
-    else {
+    } else {
       sqlCache.update("messaging.saveProjectStatusOpen", params);
     }
   }
 
-  public void addTeam(Long projectId, Long teamId, List<SmsTeamUser> ownersSelected, boolean defaultTeamAdded) {
+  public void addTeam(
+      Long projectId, Long teamId, List<SmsTeamUser> ownersSelected, boolean defaultTeamAdded) {
     User user = securityService.getCurrentUser();
 
-    Optional<Long> existingTeamId = sqlCache.queryForObjectOptional("messaging.getTeamId", Map.of("projectId", projectId, "teamId", teamId), Long.class);
+    Optional<Long> existingTeamId =
+        sqlCache.queryForObjectOptional(
+            "messaging.getTeamId", Map.of("projectId", projectId, "teamId", teamId), Long.class);
     // If team is already associated with project, do not insert again
-    if (!existingTeamId.isPresent()) {
+    if (existingTeamId.isEmpty()) {
       // Insert the SMS team to associate it with the project
-      sqlCache.update("messaging.insertTeam", Map.of("projectId", projectId, "teamId", teamId, "createdById", user.trueUserId()));
+      sqlCache.update(
+          "messaging.insertTeam",
+          Map.of("projectId", projectId, "teamId", teamId, "createdById", user.trueUserId()));
     }
 
     List<Long> ownerUserIds = new ArrayList<>();
@@ -128,22 +141,22 @@ public class MessagingService {
       }
     }
 
-    addSmsReplyNotification(projectId, teamId, new HashSet<>() {
-      {
-        addAll(ownerUserIds);
-      }
-    });
+    addSmsReplyNotification(projectId, teamId, new HashSet<>(ownerUserIds));
 
     addSmsOwnershipNotification(projectId);
 
-    updateOwnerHistory(projectId, teamId, ownerUserIds.isEmpty() ? null : ownerUserIds, true, false);
-    Optional<ProjectMessageProperties> projectMessageProps = sqlCache.get(
-      "messaging.getProject",
-      Map.of("projectId", projectId),
-      new MessagePropertiesMapper<>(ProjectMessageProperties.class, om)
-    );
-    // Check if Project is closed, if so open it - unless the default team is being added automatically
-    if (!defaultTeamAdded && projectMessageProps.isPresent() && projectMessageProps.get().isClosed()) {
+    updateOwnerHistory(
+        projectId, teamId, ownerUserIds.isEmpty() ? null : ownerUserIds, true, false);
+    Optional<ProjectMessageProperties> projectMessageProps =
+        sqlCache.get(
+            "messaging.getProject",
+            Map.of("projectId", projectId),
+            new MessagePropertiesMapper<>(ProjectMessageProperties.class, om));
+    // Check if Project is closed, if so open it - unless the default team is being added
+    // automatically
+    if (!defaultTeamAdded
+        && projectMessageProps.isPresent()
+        && projectMessageProps.get().isClosed()) {
       updateProjectStatus(projectId, false);
     }
   }
@@ -152,17 +165,18 @@ public class MessagingService {
     ProjectMessageProperties pmp = getProject(projectId);
     // Insert the SMS team to associate it with the project
     sqlCache.update("messaging.removeTeam", Map.of("projectId", projectId, "smsTeamId", smsTeamId));
-    sqlCache.update("messaging.removeTeamOwners", Map.of("projectId", projectId, "smsTeamId", smsTeamId));
+    sqlCache.update(
+        "messaging.removeTeamOwners", Map.of("projectId", projectId, "smsTeamId", smsTeamId));
     updateOwnerHistory(projectId, smsTeamId, null, false, true);
 
-    Optional<ProjectMessageProperties> projectMessageProps = sqlCache.get(
-      "messaging.getProject",
-      Map.of("projectId", projectId),
-      new MessagePropertiesMapper<>(ProjectMessageProperties.class, om)
-    );
+    Optional<ProjectMessageProperties> projectMessageProps =
+        sqlCache.get(
+            "messaging.getProject",
+            Map.of("projectId", projectId),
+            new MessagePropertiesMapper<>(ProjectMessageProperties.class, om));
 
     try {
-      notificationService.markSmsNotificationsAsRead(null, projectId, smsTeamId);
+      markSmsNotificationsAsRead(null, projectId, smsTeamId);
     } catch (SQLException e) {
       log.error("MESSAGE: Error marking SMS notifications as read {}", e.getMessage());
     }
@@ -179,37 +193,53 @@ public class MessagingService {
   }
 
   public String getHistory(Long projectId) {
-    return jdbc.queryForObject(sqlCache.getByKey("messaging.getHistory"), Map.of("projectId", projectId), String.class);
+    return jdbc.queryForObject(
+        sqlCache.getByKey("messaging.getHistory"), Map.of("projectId", projectId), String.class);
   }
 
   public void setLastSent(Long projectId) {
     User user = securityService.getCurrentUser();
-    sqlCache.update("messaging.setLastSent", Map.of("projectId", projectId, "modifiedById", user.trueUserId()));
+    sqlCache.update(
+        "messaging.setLastSent", Map.of("projectId", projectId, "modifiedById", user.trueUserId()));
   }
 
   public void clearLastSent(Long projectId) {
     User user = securityService.getCurrentUser();
-    sqlCache.update("messaging.clearLastSent", Map.of("projectId", projectId, "modifiedById", user.trueUserId()));
+    sqlCache.update(
+        "messaging.clearLastSent",
+        Map.of("projectId", projectId, "modifiedById", user.trueUserId()));
   }
 
   public void closeStaleProjects() {
-    List<Long> projectIds = sqlCache.query("messaging.getStaleProjects", null, new SingleColumnRowMapper<>(Long.class));
-    for (Long projectId: projectIds) {
+    List<Long> projectIds =
+        sqlCache.query("messaging.getStaleProjects", null, new SingleColumnRowMapper<>(Long.class));
+    for (Long projectId : projectIds) {
       ProjectMessageProperties pmp = getProject(projectId);
       List<SmsTeam> smsTeams = pmp.getSmsTeamOwners();
-      for (SmsTeam smsTeam: smsTeams) {
+      for (SmsTeam smsTeam : smsTeams) {
         removeTeam(projectId, smsTeam.getId());
       }
     }
   }
 
+  @Transactional
   public void removeOwner(Long projectId, ProjectMessageOwner owner) {
     User user = securityService.getCurrentUser();
-    sqlCache.update("messaging.removeOwner", Map.of("projectId", projectId, "userId", owner.getUserId(), "smsTeamId", owner.getSmsTeamId(), "modifiedById", user.trueUserId()));
-    updateOwnerHistory(projectId, owner.getSmsTeamId(), Arrays.asList(owner.getUserId()), false, false);
+    sqlCache.update(
+        "messaging.removeOwner",
+        Map.of(
+            "projectId",
+            projectId,
+            "userId",
+            owner.getUserId(),
+            "smsTeamId",
+            owner.getSmsTeamId(),
+            "modifiedById",
+            user.trueUserId()));
+    updateOwnerHistory(projectId, owner.getSmsTeamId(), List.of(owner.getUserId()), false, false);
 
     try {
-      notificationService.markSmsNotificationsAsRead(owner.getUserId(), projectId, owner.getSmsTeamId());
+      markSmsNotificationsAsRead(owner.getUserId(), projectId, owner.getSmsTeamId());
     } catch (SQLException e) {
       log.error("MESSAGE: Error marking SMS notifications as read {}", e.getMessage());
     }
@@ -217,9 +247,11 @@ public class MessagingService {
     addSmsOwnershipNotification(projectId);
   }
 
-  private void updateOwnerHistory(Long projectId, Long smsTeamId, List<Long> userIds, boolean isAdd, boolean removeTeam) {
+  private void updateOwnerHistory(
+      Long projectId, Long smsTeamId, List<Long> userIds, boolean isAdd, boolean removeTeam) {
     User user = securityService.getCurrentUser();
-    String sqlQuery = "SELECT * FROM flow.set_sms_project_owner_history(:projectId::integer, :smsTeamId::integer, array[ :userIds ]::integer[], :modifiedById::integer, :isAdd::boolean, :removeTeam::boolean)";
+    String sqlQuery =
+        "SELECT * FROM flow.set_sms_project_owner_history(:projectId::integer, :smsTeamId::integer, array[ :userIds ]::integer[], :modifiedById::integer, :isAdd::boolean, :removeTeam::boolean)";
 
     MapSqlParameterSource parameters = new MapSqlParameterSource();
     parameters.addValue("projectId", projectId);
@@ -232,24 +264,30 @@ public class MessagingService {
     jdbc.queryForObject(sqlQuery, parameters, String.class);
   }
 
-
   // Used to add notifications when a customer sends a SMS message to us
   public void addNotifications(TwilioMessageRequest sms) {
     String cleanPhoneNumber = sms.getFrom().replaceAll("[^0-9]", "");
-    List<Long> projectIds = sqlCache.query("sms.getProjects", Map.of("from", cleanPhoneNumber), new SingleColumnRowMapper<>(Long.class));
+    List<Long> projectIds =
+        sqlCache.query(
+            "sms.getProjects",
+            Map.of("from", cleanPhoneNumber),
+            new SingleColumnRowMapper<>(Long.class));
+
     // For any Project that is closed and has no teams assigned, open the project and assign the default team
     addDefaultTeam(projectIds);
-    for (Long projectId: projectIds) {
+
+    for (Long projectId : projectIds) {
       // Reset the last sent message date, which is used to mark the conversation as stale after 3 days of no contact
       clearLastSent(projectId);
+
       // Get the list of the Users who are set to be notified for this project
-      List<SmsTeamUser> ownerUsers = sqlCache.query("messaging.getOwnersForProject", Map.of("projectId", projectId),  SmsTeamUser.class);
-      for (SmsTeamUser smsTeamUser: ownerUsers) {
-        addSmsReplyNotification(projectId, smsTeamUser.getSmsTeamId(), new HashSet<>() {
-          {
-            add(smsTeamUser.getUserId());
-          }
-        });
+      List<SmsTeamUser> ownerUsers =
+          sqlCache.query(
+              "messaging.getOwnersForProject", Map.of("projectId", projectId), SmsTeamUser.class);
+
+      for (SmsTeamUser smsTeamUser : ownerUsers) {
+        addSmsReplyNotification(
+            projectId, smsTeamUser.getSmsTeamId(), new HashSet<>(List.of(smsTeamUser.getUserId())));
 
         addSmsOwnershipNotification(projectId);
       }
@@ -267,53 +305,32 @@ public class MessagingService {
     }
 
     notificationService.createNotification(
-      new CreateNotificationDto()
-        .setTopic(NotificationTopic.SMS_REPLY)
-        .setTitle("New SMS message from customer")
-        .setBody("")
-        .setPriority(1)
-        .setMetadata(Map.of("projectId", projectId, "smsTeamId", smsTeamId)),
-      userIds,
-      user.trueUserId()
-    );
+        new CreateNotificationDto()
+            .setTopic(NotificationTopic.SMS_REPLY)
+            .setTitle("New SMS message from customer")
+            .setBody("")
+            .setPriority(1)
+            .setMetadata(Map.of("projectId", projectId, "smsTeamId", smsTeamId)),
+        userIds,
+        user.trueUserId());
   }
 
   // Used for triggering a data refresh on the SMS Inbox screen for all owners of a Project
   public void addSmsOwnershipNotification(Long projectId) {
     ProjectMessageProperties pmp = getProject(projectId);
-    for (SmsTeam smsTeam: pmp.getSmsTeamOwners()) {
-      SmsTeam smsTeamDetails = getTeamUsers(smsTeam.getId());
-      List<Long> smsTeamUserIds = smsTeamDetails.getUsers().stream()
-        .map(SmsTeamUser::getUserId)
-        .collect(Collectors.toList());
-
-      if (!smsTeamUserIds.isEmpty()) {
-        User user = securityService.getCurrentUser();
-        // Remove the logged in User so their screen does not refresh after sending an SMS message
-        smsTeamUserIds.remove(user.getId());
-        addSmsOwnershipNotification(projectId, smsTeam.getId(), new HashSet<>() {
-          {
-            addAll(smsTeamUserIds);
-          }
-        });
-      }
-    }
+    addSmsOwnershipNotification(pmp);
   }
 
   // Used for triggering a data refresh on the SMS Inbox screen for all owners of a Project
   private void addSmsOwnershipNotification(ProjectMessageProperties pmp) {
-    for (SmsTeam smsTeam: pmp.getSmsTeamOwners()) {
+    for (SmsTeam smsTeam : pmp.getSmsTeamOwners()) {
       SmsTeam smsTeamDetails = getTeamUsers(smsTeam.getId());
-      List<Long> smsTeamUserIds = smsTeamDetails.getUsers().stream()
-        .map(SmsTeamUser::getUserId)
-        .collect(Collectors.toList());
+      List<Long> smsTeamUserIds =
+          smsTeamDetails.getUsers().stream().map(SmsTeamUser::getUserId).toList();
 
       if (!smsTeamUserIds.isEmpty()) {
-        addSmsOwnershipNotification(pmp.getProjectId(), smsTeam.getId(), new HashSet<>() {
-          {
-            addAll(smsTeamUserIds);
-          }
-        });
+        addSmsOwnershipNotification(
+            pmp.getProjectId(), smsTeam.getId(), new HashSet<>(smsTeamUserIds));
       }
     }
   }
@@ -323,26 +340,27 @@ public class MessagingService {
     // Add notification for the current user so their data gets refreshed
     userIds.add(user.getId());
 
-    for (Long userId: userIds) {
-      Notification notification = new Notification();
-      notification.setTopic(NotificationTopic.SMS_OWNERSHIP);
-      notification.setTitle("Ownership has changed for this project");
-      notification.setBody("");
-      notification.setPriority(1);
-      notification.setMetadata(Map.of("projectId", projectId, "smsTeamId", smsTeamId));
-      notification.setUserId(userId);
+    for (Long userId : userIds) {
+      Notification notification =
+          new Notification()
+              .setTopic(NotificationTopic.SMS_OWNERSHIP)
+              .setTitle("Ownership has changed for this project")
+              .setBody("")
+              .setPriority(1)
+              .setMetadata(Map.of("projectId", projectId, "smsTeamId", smsTeamId))
+              .setUserId(userId);
       pubSubService.publish(EventChannel.NOTIFICATION, NotificationEventMessage.from(notification));
     }
   }
 
   public void addDefaultTeam(List<Long> projectIds) {
     User user = securityService.getCurrentUser();
-    for (Long projectId: projectIds) {
-      Optional<ProjectMessageProperties> projectMessageProps = sqlCache.get(
-        "messaging.getProject",
-        Map.of("projectId", projectId),
-        new MessagePropertiesMapper<>(ProjectMessageProperties.class, om)
-      );
+    for (Long projectId : projectIds) {
+      Optional<ProjectMessageProperties> projectMessageProps =
+          sqlCache.get(
+              "messaging.getProject",
+              Map.of("projectId", projectId),
+              new MessagePropertiesMapper<>(ProjectMessageProperties.class, om));
 
       // Check if Project exists
       if (projectMessageProps.isPresent()) {
@@ -351,18 +369,15 @@ public class MessagingService {
         if (projectMessage.getSmsTeamOwners().isEmpty()) {
           updateProjectStatus(projectId, false);
           Optional<Long> teamId = getDefaultTeamId();
-          if (teamId.isPresent()) {
-            addTeam(projectId, teamId.get(), null, true);
-          }
+          teamId.ifPresent(aLong -> addTeam(projectId, aLong, null, true));
         }
-      }
-      else {
+      } else {
         // If the project has not had a conversation, start it
-        sqlCache.update("messaging.insertProject", Map.of("projectId", projectId, "createdById", user.trueUserId()));
+        sqlCache.update(
+            "messaging.insertProject",
+            Map.of("projectId", projectId, "createdById", user.trueUserId()));
         Optional<Long> teamId = getDefaultTeamId();
-        if (teamId.isPresent()) {
-          addTeam(projectId, teamId.get(), null, true);
-        }
+        teamId.ifPresent(aLong -> addTeam(projectId, aLong, null, true));
       }
     }
   }
@@ -375,26 +390,33 @@ public class MessagingService {
     params.put("parentCompanyId", user.getHighestParentCompanyId());
     params.put("isParent", isParent);
 
-    Optional<Long> result = sqlCache.get("smsTeam.getDefaultTeamId", params, new SingleColumnRowMapper<>(Long.class));
-    return result;
+    return sqlCache.get(
+        "smsTeam.getDefaultTeamId", params, new SingleColumnRowMapper<>(Long.class));
   }
 
-  private List<SmsTeam> getTeamsForUser() {
-    User user = securityService.getCurrentUser();
+  private List<SmsTeam> getTeamsForUser(@NonNull User user) {
     Boolean isParent = user.getCompanyId().equals(user.getHighestParentCompanyId());
+
     HashMap<String, Object> params = new HashMap<>();
     params.put("companyId", user.getCompanyId());
     params.put("parentCompanyId", user.getHighestParentCompanyId());
     params.put("isParent", isParent);
     params.put("userId", user.getId());
 
-    List<SmsTeam> teamsAssociatedToUser = sqlCache.query("smsTeam.getTeamsForUser", params, new SmsTeamService.SmsTeamMapper<>(SmsTeam.class, om));
-    teamsAssociatedToUser = teamsAssociatedToUser.stream().filter(u -> !u.getUsers().isEmpty()).collect(Collectors.toList());
-    return teamsAssociatedToUser;
+    return sqlCache
+        .query(
+            "smsTeam.getTeamsForUser",
+            params,
+            new SmsTeamService.SmsTeamMapper<>(SmsTeam.class, om))
+        .stream()
+        .filter(u -> !u.getUsers().isEmpty())
+        .toList();
   }
 
+  @Transactional
   public void deleteConversation(Long projectId) {
     User user = securityService.getCurrentUser();
+
     Map<String, Object> params = new HashMap<>();
     params.put("projectId", projectId);
     params.put("modifiedById", null != user ? user.trueUserId() : SystemSettings.CRON_USER.getId());
@@ -404,7 +426,7 @@ public class MessagingService {
     sqlCache.update("messaging.deleteProjectConversation", params);
 
     try {
-      notificationService.markSmsNotificationsAsRead(null, projectId, null);
+      markSmsNotificationsAsRead(null, projectId, null);
     } catch (SQLException e) {
       log.error("MESSAGE: Error marking SMS notifications as read {}", e.getMessage());
     }
@@ -413,17 +435,83 @@ public class MessagingService {
   private SmsTeam getTeamDetails(Long id) {
     HashMap<String, Object> params = new HashMap<>();
     params.put("id", id);
-    Optional<SmsTeam> result = sqlCache.get("smsTeam.getDetails", params, new SmsTeamService.SmsTeamMapper<>(SmsTeam.class, om));
-    return result.orElse(null);
+    return sqlCache
+        .get("smsTeam.getDetails", params, new SmsTeamService.SmsTeamMapper<>(SmsTeam.class, om))
+        .orElse(null);
   }
 
-  public SmsTeam getTeamUsers(Long id) {
+  public SmsTeam getTeamUsers(Long teamId) {
     User user = securityService.getCurrentUser();
+
     HashMap<String, Object> params = new HashMap<>();
     params.put("companyId", user.getCompanyId());
-    params.put("id", id);
-    Optional<SmsTeam> result = sqlCache.get("smsTeam.getTeamUsers", params, new SmsTeamService.SmsTeamMapper<>(SmsTeam.class, om));
-    return result.orElse(null);
+    params.put("id", teamId);
+
+    return sqlCache
+        .get("smsTeam.getTeamUsers", params, new SmsTeamService.SmsTeamMapper<>(SmsTeam.class, om))
+        .orElse(null);
+  }
+
+  private void markSmsNotificationsAsRead(Long userId, Long projectId, Long smsTeamId)
+      throws SQLException {
+    User user = securityService.getCurrentUser();
+
+    int updatedRecords;
+    final Long SMS_REPLY_NOTIFICATION_TOPIC_ID = 2L;
+
+    final Map<String, Object> params = new HashMap<>();
+    params.put("modifiedById", user.trueUserId());
+    params.put("projectId", projectId);
+    params.put("notificationTopicId", SMS_REPLY_NOTIFICATION_TOPIC_ID);
+    params.put("userId", userId);
+    params.put("smsTeamId", smsTeamId);
+
+    List<Long> userIds;
+
+    if (userId != null) {
+      updatedRecords = sqlCache.update("messaging.markSmsAsReadForUser", params);
+      userIds = List.of(userId);
+
+      Notification notification =
+          new Notification()
+              .setTopic(NotificationTopic.SMS_REPLY)
+              .setTitle("Notification read")
+              .setBody("")
+              .setPriority(1)
+              .setUserId(userId);
+
+      pubSubService.publish(EventChannel.NOTIFICATION, NotificationEventMessage.from(notification));
+
+      log.debug("[Messaging] Marked {} records as read for user={}", updatedRecords, userId);
+    } else if (smsTeamId != null) {
+      updatedRecords = sqlCache.update("messaging.markSmsAsReadForTeam", params);
+
+      userIds =
+          sqlCache.query(
+              "messaging.findUserByForTeam", params, new SingleColumnRowMapper<>(Long.class));
+
+      log.debug(
+          "[Messaging] Marked {} records as read for smsTeamId={}", updatedRecords, smsTeamId);
+    } else {
+      updatedRecords = sqlCache.update("messaging.markSmsAsReadForProject", params);
+
+      userIds =
+          sqlCache.query(
+              "messaging.findUserByForProject", params, new SingleColumnRowMapper<>(Long.class));
+
+      log.debug(
+          "[Messaging] Marked {} records as read for projectId={}", updatedRecords, projectId);
+    }
+
+    // make sure user notification cache is up-to-date
+    clearUserCache(userIds);
+  }
+
+  private void clearUserCache(List<Long> userIds) {
+    final Cache cache = cacheManager.getCache(CachingConfig.NOTIFICATION);
+    if (cache != null) {
+      userIds.forEach(cache::evictIfPresent);
+    }
   }
 
   public static class MessagePropertiesMapper<T> extends BeanPropertyRowMapper<T> {
@@ -437,15 +525,16 @@ public class MessagingService {
     @Override
     protected void initBeanWrapper(BeanWrapper bw) {
       TypeReference<List<SMSQueueItem>> messageHistoryRef = new TypeReference<>() {};
-      bw.registerCustomEditor(List.class, "messageHistory",
-        new JsonCollectionDeserializer(messageHistoryRef, objectMapper));
+      bw.registerCustomEditor(
+          List.class,
+          "messageHistory",
+          new JsonCollectionDeserializer(messageHistoryRef, objectMapper));
       TypeReference<List<SmsTeam>> teamsRef = new TypeReference<>() {};
-      bw.registerCustomEditor(List.class, "smsTeamOwners",
-        new JsonCollectionDeserializer(teamsRef, objectMapper));
+      bw.registerCustomEditor(
+          List.class, "smsTeamOwners", new JsonCollectionDeserializer(teamsRef, objectMapper));
       TypeReference<List<SmsTeamUser>> usersRef = new TypeReference<>() {};
-      bw.registerCustomEditor(List.class, "users",
-        new JsonCollectionDeserializer(usersRef, objectMapper));
+      bw.registerCustomEditor(
+          List.class, "users", new JsonCollectionDeserializer(usersRef, objectMapper));
     }
   }
-
 }
